--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3000",
-    "lint": "next lint",
+    "lint": "next lint --max-warnings=0 --dir app --dir components --dir lib --dir hooks",
+    "typecheck": "tsc --noEmit",
     "db:seed": "prisma db seed",
     "postinstall": "prisma generate"
   },
