--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node"],
     "target": "ES2021",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
