--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,15 @@
-# .dockerignore
-.git
-.gitignore
-node_modules
 .next
-out
+node_modules
+Dockerfile.dev
+docker-compose.dev.yml
+*.log
+.env*
+app/generated
 coverage
-npm-debug.log
+.git
 .vscode
-.env
-.env.local
-Dockerfile*
-docker-compose*.yml
+dist
+build
+out
 README.md
+**/.DS_Store
